# 13X005-AI-Project

./: .gitignore  Makefile  README.md  project-infos.md  pyproject.toml  setup_poetry  training_test.ipynb
.github/workflows/: python-app.yml
presentation/: Regression_MJJD.md  feature_analyse_NAP.md  metrics_evolution_LERC.md  sampling.md
presentation/slides-svelte/: .gitignore  .prettierrc  README.md  bun.lockb  create-pres-dir  package.json  tailwind.config.js
presentation/slides-svelte/src/lib/: app.postcss  drawer.svelte  homeBtn.svelte  presMd.svelte
presentation/slides-svelte/src/lib/deck/: code.svelte  markdown.svelte  revealExample.svelte  slide.svelte  slides.svelte
presentation/slides-svelte/src/routes/: +layout.svelte  +page.svelte
presentation/slides-svelte/src/routes/q01/: +page.svelte
presentation/slides-svelte/static/: bare.css  example.md  font-awesome
presentation/slides-svelte/static/md/: q01.md  q02.md  q03.md  q04.md  q05.md  q06.md  q07.md  q08.md  q09.md  q10.md  q11.md  q12.md  q13.md  q14.md  q15.md  q16.md  q17.md  q19.md  q20.md  q21.md
presentation/slides-svelte/static/presentation/: Overfitting_MJJD.md  Regression_MJJD.md  bayes_NM.md  feature_analyse_NAP.md  metrics_evolution_LERC.md  ordre-parole.md  sampling_GS.md
presentation/slides-svelte/static/presentation/new/: Overfitting_MJJD.md  Regression_MJJD.md  feature_analyse_NAP.md
presentation/slides-svelte/static/themes/: common.css  fixation.css
report/: cost_function.md  cost_function_binary.md  over_training.md  preamble_ai_project.sty  references.bib  report.md  report.tex  report.toc
res/: cost_function_graph.py
src/: evol.py  feature_analyse_plot.py  gradient_descent.py  log_reg.py  main.py  metrics.py  naive_bayes.py  over_training.py  overfitting.py  plot_util.py  sampling.py  softmax.py  training_test.ipynb
